2025-12-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCopt.c:
	  Fix bug #3899.

2025-12-01 Janko Stamenović

	* src/SDCCmain.c
	  Better _pipe call in Windows

2025-11-30 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/tempops.c:
	  Add more debugging information to temp reg operations.
	* src/mos6502/gen.c,
	  src/mos6502/genand.c,
	  src/mos6502/genlshift.c,
	  src/mos6502/genrshift.c,
	  src/mos6502/genplus.c:
	  Fix several stack-auto regressions.
	
2025-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge arraybounds branch.

2025-11-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCopt.c,
	  src/SDCCsymt.c,
	  support/valdiag/tests/arraybounds.c
	  src/SDCCdflow.h,
	  src/SDCCgenconstprop.cc,
	  support/regression/tests/arraybounds.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_from_integer_2g.c:
	  Additional diagnostics for potential array bound issues.
	* src/z80/gen.c:
	  Fix a r3la codegen issue triggered by previous changes.

2025-11-29 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/genplus.c,
	  src/mos6502/genminus.c:
	  Refactor genPlus and genMinus.
	  
2025-11-29 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.lex,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCval.c,
	  support/regression/tests/size_t_suffix.c:
	  Add Literal Suffixes for size_t (C2y, N3485).

2025-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge _Optional branch.

2025-11-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  src/SDCCval.c,
	  support/valdiag/tests/_Optional.c,
	  support/valdiag/tests/restrict.c:
	  Fix diagnostics for _Optional (and restrict) qualifier on parameters in function declarations that are not definitions, and on explicit casts.
	* doc/sdccman.lyx:
	  Basic documentation for _Optional support.

2025-11-28 Gabriele Gorla <gorlik@yahoo.com>
