@@ -1569,14 +1569,14 @@ constCharacterVal (unsigned long v, char type)
       SPEC_NOUN (val->type) = V_INT;
       SPEC_USIGN (val->type) = 1;
       SPEC_LONG (val->etype) = 1;
-      SPEC_CVAL (val->type).v_ulong = (TYPE_UDWORD) v;
+      SPEC_CVAL (val->type).v_ulong = (uint32_t) v;
       break;
     case 'u': // wide character constant
       if (!options.std_c11)
         werror (E_WCHAR_CONST_C11);
       SPEC_NOUN (val->type) = V_INT;
       SPEC_USIGN (val->type) = 1;
-      SPEC_CVAL (val->type).v_uint = (TYPE_UWORD) v;
+      SPEC_CVAL (val->type).v_uint = (uint16_t) v;
       break;
     case 'U': // wide character constant
       if (!options.std_c11)
@@ -1584,7 +1584,7 @@ constCharacterVal (unsigned long v, char type)
       SPEC_NOUN (val->type) = V_INT;
       SPEC_USIGN (val->type) = 1;
       SPEC_LONG (val->etype) = 1;
-      SPEC_CVAL (val->type).v_ulong = (TYPE_UDWORD) v;
+      SPEC_CVAL (val->type).v_ulong = (uint32_t) v;
       break;
     case '8': // u8 character constant of type char8_t, a typedef for unsigned char.
       if (!options.std_c23)
@@ -1653,19 +1653,19 @@ constNullptrVal (void)
 }
 
 // TODO: Move this function to SDCCutil?
-static const TYPE_UDWORD *utf_32_from_utf_8 (size_t *utf_32_len, const char *utf_8, size_t utf_8_len)
+static const uint32_t *utf_32_from_utf_8 (size_t *utf_32_len, const char *utf_8, size_t utf_8_len)
 {
   size_t allocated = 0;
-  TYPE_UDWORD *utf_32 = 0;
+  uint32_t *utf_32 = 0;
   unsigned char first_byte;
-  TYPE_UDWORD codepoint;
+  uint32_t codepoint;
   size_t seqlen;
 
   for (*utf_32_len = 0; utf_8_len; (*utf_32_len)++)
     {
       if (allocated == *utf_32_len)
         {
-          utf_32 = realloc (utf_32, sizeof(TYPE_UDWORD) * (*utf_32_len + 16));
+          utf_32 = realloc (utf_32, sizeof(uint32_t) * (*utf_32_len + 16));
           wassert (utf_32);
           allocated = *utf_32_len + 16;
         }
@@ -1699,17 +1699,17 @@ static const TYPE_UDWORD *utf_32_from_utf_8 (size_t *utf_32_len, const char *utf
 }
 
 // TODO: Move this function to SDCCutil?
-static const TYPE_UWORD *utf_16_from_utf_32 (size_t *utf_16_len, const TYPE_UDWORD *utf_32, size_t utf_32_len)
+static const uint16_t *utf_16_from_utf_32 (size_t *utf_16_len, const uint32_t *utf_32, size_t utf_32_len)
 {
   size_t allocated = 0;
-  TYPE_UWORD *utf_16 = 0;
-  TYPE_UDWORD codepoint;
+  uint16_t *utf_16 = 0;
+  uint32_t codepoint;
 
   for (*utf_16_len = 0; utf_32_len; utf_32_len--, utf_32++)
     {
       if (allocated <= *utf_16_len + 2)
         {
-          utf_16 = realloc (utf_16, sizeof(TYPE_UWORD) * (*utf_16_len + 16));
+          utf_16 = realloc (utf_16, sizeof(uint16_t) * (*utf_16_len + 16));
           wassert (utf_16);
           allocated = *utf_16_len + 16;
         }
@@ -1778,7 +1778,7 @@ strVal (const char *s)
 
       size_t utf_32_size;
       // Convert to UTF-32 next, since converting UTF-32 to UTF-16 is easier than UTF-8 to UTF-16.
-      const TYPE_UDWORD *utf_32 = utf_32_from_utf_8 (&utf_32_size, utf_8, utf_8_size);
+      const uint32_t *utf_32 = utf_32_from_utf_8 (&utf_32_size, utf_8, utf_8_size);
 
       dbuf_free (utf_8);
 
@@ -1793,7 +1793,7 @@ strVal (const char *s)
       else if (s[0] == 'u') // UTF-16 string literal
         {
           size_t utf_16_size;
-          const TYPE_UWORD *utf_16 = utf_16_from_utf_32 (&utf_16_size, utf_32, utf_32_size);
+          const uint16_t *utf_16 = utf_16_from_utf_32 (&utf_16_size, utf_32, utf_32_size);
 
           SPEC_NOUN (val->etype) = V_INT;
           SPEC_USIGN (val->etype) = 1;
@@ -2004,7 +2004,7 @@ charVal (const char *s)
   else if (type) // Wide character constant
     {
       size_t ulen;
-      const TYPE_UDWORD *ustr = utf_32_from_utf_8 (&ulen, s, strlen(s) - 1);
+      const uint32_t *ustr = utf_32_from_utf_8 (&ulen, s, strlen(s) - 1);
       value *val = constCharacterVal (*ustr, type);
       free ((void *)ustr);
       return (val);
