@@ -1,3 +1,11 @@
+2025-12-04 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* configure,
+	  configure.ac,
+	  src/SDCCsymt.h,
+	  src/SDCCval.c:
+	  Replace type macros by ISO C99 typedefs.
+
 2025-12-03 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/SDCCopt.c:
